--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -35,7 +35,7 @@ jobs:
           ln -s ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android-ar
           export CC=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang
           export CXX=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang++
-          RUSTFLAGS="--emit=llvm-bc" ~/.cargo/bin/cargo build  --release --target aarch64-linux-android
+          RUSTFLAGS="--emit=llvm-ar" ~/.cargo/bin/cargo build  --release --target aarch64-linux-android
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
