--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -34,6 +34,7 @@ jobs:
           set -e
           ln -s ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android-ar
           export CC=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang
+          export AR=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar
           export CXX=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang++
           RUSTFLAGS="--emit=llvm-ar" ~/.cargo/bin/cargo build  --release --target aarch64-linux-android
       - name: Upload artifact
