--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -26,17 +26,23 @@ jobs:
           ndk-version: r26c
           add-to-path: true
           local-cache: false
+     
+      - name: setup cargo-ndk
+        run: |
+          set -e
+          cargo install cargo-ndk
+          rustup target add aarch64-linux-android
 
       - name: Build ss-rust
         env:
           ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
         run: |
           set -e
-          ln -s ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar ${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android-ar
           export CC=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang
           export AR=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar
           export CXX=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang++
-          RUSTFLAGS="-C target-feature=+crt-static" ~/.cargo/bin/cargo build  --release --target aarch64-linux-android
+          cargo ndk -t arm64-v8a -o ./ build --release
+ 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
