--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -23,8 +23,8 @@ jobs:
         uses: nttld/setup-ndk@v1
         id: setup-ndk
         with:
-          ndk-version: r26c
-          add-to-path: true
+          ndk-version: r26d
+          add-to-path: false
           local-cache: false
      
       - name: setup cargo-ndk
