--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -42,7 +42,13 @@ jobs:
           export AR=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar
           export CXX=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang++
           cargo ndk -t arm64-v8a -o ./ build --release
- 
+
+      
+      - name: ls 
+        run: |
+         pwd
+         ls shadowsocks-rust/target/release
+         
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
