--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -51,6 +51,7 @@ jobs:
       - name: ls 
         run: |
          pwd
+         ls -lart
          ls shadowsocks-rust/target/release
          
       - name: Upload artifact
