--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -52,10 +52,10 @@ jobs:
         run: |
          pwd
          ls -lart
-         ls shadowsocks-rust/target/release
+         ls target/release
          
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
           name: shadowsocks-rust
-          path: ss*
+          path: target/release/ss*
