--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -45,13 +45,13 @@ jobs:
           export CC=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang
           export AR=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar
           export CXX=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang++
-          cargo ndk -t arm64-v8a -o ../ build --release
+          cargo ndk -t arm64-v8a -o ../ss-rust build --release
 
       
       - name: ls 
         run: |
          pwd
-         ls -lart
+         ls -lart ss-rust
          ls target/release
          
       - name: Upload artifact
