--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -45,14 +45,14 @@ jobs:
           export CC=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang
           export AR=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-ar
           export CXX=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang++
-          cargo ndk -t arm64-v8a build --release
+          cargo ndk -t arm64-v8a -o ./target build --release
 
       
       - name: ls 
         run: |
          pwd
          ls -lart 
-         ls build/target
+         ls target
          
       - name: Upload artifact
         uses: actions/upload-artifact@v3
