--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -51,7 +51,8 @@ jobs:
       - name: ls 
         run: |
          pwd
-         ls -lart 
+         ls -lart bin
+         ls -lart target/release
          ls target/arm64-v8a
          
       - name: Upload artifact
