--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -59,6 +59,6 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: shadowsocks-rust
-          path: 
+          path: |
             target/aarch64-linux-android/release/sslocal
-            target/aarch64-linux-android/release/sslocal
+            target/aarch64-linux-android/release/ssservice
