--- a/.github/workflows/ss.yml
+++ b/.github/workflows/ss.yml
@@ -62,3 +62,4 @@ jobs:
           path: |
             target/aarch64-linux-android/release/sslocal
             target/aarch64-linux-android/release/ssservice
+            target/arm64-v8a/*
