--- a/.github/workflows/rnetx-next-win.yml
+++ b/.github/workflows/rnetx-next-win.yml
@@ -24,13 +24,13 @@ jobs:
         with:
           fetch-depth: 0
           repository:  rnetx/sing-box
-          ref: next
+          ref: next2
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.6
+          go-version: 1.22.5
   build_go120:
-    name: Debug build (Go 1.21)
+    name: Debug build (Go 1.22)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -38,11 +38,11 @@ jobs:
         with:
           fetch-depth: 0
           repository: rnetx/sing-box
-          ref: next
+          ref: next2
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.6
+          go-version: 1.22.5
   cross:
     strategy:
       matrix:
@@ -80,7 +80,7 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.21.6
+          go-version: 1.22.5
       - name: Build
         id: build
         run: make
