--- a/.github/workflows/next2-core.yml
+++ b/.github/workflows/next2-core.yml
@@ -13,8 +13,7 @@ jobs:
       - uses: actions/checkout@v4.1.1
         with:
           fetch-depth: 0
-          repository: rnetx/sing-box
-          ref: next2
+          repository: debiansid/sing-box
       - name: delete tag
         run: |
          cd /home/runner/work/sing-box-build/sing-box-build
