--- a/.github/workflows/rnetx-next2-win.yml
+++ b/.github/workflows/rnetx-next2-win.yml
@@ -20,29 +20,29 @@ jobs:
           echo "RELEASE_NAME=Released on $(date +%Y%m%d%H%M)" >> $GITHUB_ENV
           echo "TAG_NAME=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4.1.7
         with:
           fetch-depth: 0
           repository:  rnetx/sing-box
           ref: next2
       - name: Setup Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.22.5
+          go-version: ^1.23
   build_go120:
-    name: Debug build (Go 1.22)
+    name: Debug build (Go 1.23)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4.1.7
         with:
           fetch-depth: 0
           repository: rnetx/sing-box
           ref: next2
       - name: Setup Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.22.5
+          go-version: ^1.23
   cross:
     strategy:
       matrix:
@@ -65,7 +65,7 @@ jobs:
       GOARM: ${{ matrix.goarm }}
       GOMIPS: ${{ matrix.gomips }}
       CGO_ENABLED: 1
-      TAGS: with_gvisor,with_quic,with_clash_api,with_utls,with_outbound_provider
+      TAGS: with_gvisor,with_quic,with_clash_api,with_utls,with_dhcp,with_outbound_provider
     steps:
       - name: Set variables
         run: |
@@ -78,9 +78,9 @@ jobs:
           repository: rnetx/sing-box
           ref: next2
       - name: Setup Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.22.5
+          go-version: ^1.23
       - name: Build
         id: build
         run: make
@@ -95,7 +95,7 @@ jobs:
         if: ${{ contains(matrix.name, 'linux') || contains(matrix.name, 'bsd') || contains(matrix.name, 'darwin') || contains(matrix.name, 'android') }}
         run: mv sing-box* sing-box-${{ matrix.name }}
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4.4.0
         with:
           name: sing-box-${{ matrix.name }}
           path: sing-box*
