--- a/.github/workflows/debiansid.yml
+++ b/.github/workflows/debiansid.yml
@@ -20,7 +20,7 @@ jobs:
           echo "RELEASE_NAME=Released on $(date +%Y%m%d%H%M)" >> $GITHUB_ENV
           echo "TAG_NAME=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
       - name: Checkout
-        uses: actions/checkout@v
+        uses: actions/checkout@v4.1.7
         with:
           fetch-depth: 0
           repository:  debiansid/sing-box
