--- a/.github/workflows/libbox.yml
+++ b/.github/workflows/libbox.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
          repository: SagerNet/sing-box
-         ref: dev-next
+         ref: main
          fetch-depth: 0
 
       - name: Get latest go version
@@ -23,13 +23,13 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: ^1.23
+          go-version: ^1.22
 
       - name: Checkout SFA Repository
         uses: actions/checkout@v4
         with:
           repository: SagerNet/sing-box-for-android
-          ref: dev
+          ref: main
           path: SFA
           submodules: recursive
 
