--- a/.github/workflows/libbox.yml
+++ b/.github/workflows/libbox.yml
@@ -47,5 +47,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: SFA
+          name: libbox.aar
           path: SFA/app/libs/libbox.aar
