--- a/.github/workflows/libbox.yml
+++ b/.github/workflows/libbox.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
          repository: SagerNet/sing-box
-         ref: main
+         ref: dev-next
          fetch-depth: 0
 
       - name: Get latest go version
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: SagerNet/sing-box-for-android
-          ref: main
+          ref: dev
           path: SFA
           submodules: recursive
 
