--- a/.github/workflows/libbox.yml
+++ b/.github/workflows/libbox.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
         with:
          repository: SagerNet/sing-box
-         ref: dev-next
+         ref: main-next
          fetch-depth: 0
 
       - name: Get latest go version
@@ -23,13 +23,13 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: ^1.22
+          go-version: ^1.23
 
       - name: Checkout SFA Repository
         uses: actions/checkout@v4
         with:
           repository: SagerNet/sing-box-for-android
-          ref: dev
+          ref: main
           path: SFA
           submodules: recursive
 
@@ -41,7 +41,7 @@ jobs:
           make lib_install
           version=$(CGO_ENABLED=0 go run ./cmd/internal/read_tag)
           CC=${ANDROID_NDK_HOME}/toolchains/llvm/prebuilt/linux-x86_64/bin/aarch64-linux-android34-clang
-          CGO_ENABLED=0 gomobile bind -v -a -trimpath -androidapi 21 -javapkg=io.nekohasekai -libname=box -tags ${TAGS} -ldflags "-X github.com/sagernet/sing-box/constant.Version=${version} -s -w -buildid=" ./experimental/libbox
+          CGO_ENABLED=0 CC=${CC} gomobile bind -v -a -trimpath -androidapi 21 -javapkg=io.nekohasekai -libname=box -tags ${TAGS} -ldflags "-X github.com/sagernet/sing-box/constant.Version=${version} -s -w -buildid=" ./experimental/libbox
           cp ./libbox.aar SFA/app/libs/
              
       - name: Upload artifact
